fix scrollbar layout shift

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  scrollbar-gutter: stable;
 
   color-scheme: light dark;
   color: var(--fg);
